# spiderfoot-claude-code

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  lab.sh  pyproject.toml
configs/alerts/: siem-alert-001.json  siem-alert-002.json  siem-alert-003.json
configs/api-target/: index.html
configs/breach-api/: app.py
configs/dev-target/: index.html
configs/dnsmasq/: dnsmasq.conf
configs/files-target/: index.html
configs/old-target/: index.html
configs/scenarios/: operation-shadow-harvest.md
configs/siem-api/: Dockerfile  app.py
configs/staging-target/: index.html
configs/threatintel-api/: app.py
configs/vpn-target/: index.html
configs/web-target/: index.html  robots.txt
modules/: sfp_abuseipdb_mock.py  sfp_breach_api.py  sfp_dnsresolve_mock.py  sfp_email_lab.py  sfp_greynoise_mock.py  sfp_shodan_mock.py  sfp_sslcert_mock.py  sfp_virustotal_mock.py  sfp_whois_mock.py
sample-iocs/: suspicious-domains.txt  suspicious-hashes.txt  suspicious-ips.txt
scripts/: __init__.py  configure_api_keys.py  configure_spiderfoot.py  entrypoint.sh  filter-findings.sh  filter-synthesis.sh  sf_cli.py
