[project]
name = "spiderfoot-claude-code"
version = "0.1.0"
description = "SpiderFoot OSINT Lab with CLI for AI coding assistant integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joshua Magady", email = "josh@magady.me"}
]
keywords = ["spiderfoot", "osint", "security", "claude-code", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/drbothen/spiderfoot-claude-code"
Repository = "https://github.com/drbothen/spiderfoot-claude-code"
Issues = "https://github.com/drbothen/spiderfoot-claude-code/issues"

[project.scripts]
sf-cli = "scripts.sf_cli:main"

[tool.uv]
package = true
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
